--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,9 @@
     "dev": "webpack-dev-server --mode development"
   },
   "devDependencies": {
+    "@openzeppelin/contracts": "^4.3.0",
     "copy-webpack-plugin": "^4.6.0",
+    "openzeppelin-solidity": "^2.3.0",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
