--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "ipfs": "^0.58.1",
-    "truffle-hdwallet-provider": "^1.0.0-web3one.5",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.5"
   }
 }
